--- a/LeckerBag/WebContent/bestellung_kunde.html
+++ b/LeckerBag/WebContent/bestellung_kunde.html
@@ -110,7 +110,7 @@
                                             <p class="form-control form-control_ext_bestellung" id="bestellung_lieferant_profil"></p>
                                             <div class="col-xs-12 text-center col-md-12 col-sm-12 col-lg-12" id="bestellung_rating" data-pg-collapsed style="display:none">
                                                 <h1 class="rating-num">4.6</h1>
-                                                <div class="rating" data-pg-collapsed>
+                                                <div class="rating_paulo" data-pg-collapsed>
                                                     <span class="fa fa-star star_green"></span>
                                                     <span class="fa fa-star  star_green"></span>
                                                     <span class="fa fa-star  star_green"></span>
@@ -150,6 +150,7 @@
         <script src="js/bootstrap.js"></script>
         <script src="js/bootstrap-datepicker.js"></script>         
         <script src="js/functions.js"></script>
+        <script src="js/kunde_maps_bestellung.js"></script>
         <script>
         	$('.datePicker').datepicker();
         	getDateToday("bestellung_startdatum");
