--- a/LeckerBag/WebContent/index.html
+++ b/LeckerBag/WebContent/index.html
@@ -135,6 +135,7 @@
 	        });
         </script>                     
         <script src="js/bootstrap.js"></script>         
-        <script src="js/functions.js"></script>         
+        <script src="js/functions.js"></script>
+        <script src="js/startseite_kommentare_carousel.js"></script>       
     </body>     
 </html>
