--- a/LeckerBag/WebContent/1_details_abo.html
+++ b/LeckerBag/WebContent/1_details_abo.html
@@ -53,14 +53,14 @@
                                             <div class="row" style="margin-bottom: 15px">
                                                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                                                     <h4>Details zum Abonnement</h4>
-                                                    <p>Modell: 7 Tage Abonnement<br></p>
-                                                    <p>Bestelldatum: 27.04.1015<br></p>
-                                                    <p>Startdatum: 04.05.2015<br></p>
+                                                    <p>Modell: 30 Tage Abonnement<br></p>
+                                                    <p>Bestelldatum: 01.09.1015<br></p>
+                                                    <p>Startdatum: 01.10.2015<br></p>
                                                     <p>Kosten: 24,50 €<br></p>
                                                 </div>
                                                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                                                     <h4>Details zum Kunden</h4> 
-                                                    <p>Name Maria Müller<br></p>
+                                                    <p>Name Max Mustermann<br></p>
                                                     <p>Straße: Weingartenstraße 31<br></p>
                                                     <p>Postleitzahl: 97072 Würzburg<br></p>
                                                 </div>
@@ -68,13 +68,13 @@
                                             <div class="row">
                                                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                                                     <h4>Details zum Lieferanten</h4> 
-                                                    <p>Name: Bäcker Bob<br></p>
+                                                    <p>Name: Rösner Backstube<br></p>
                                                     <p>Straße: Sanderstraße 12<br></p>
                                                     <p>Postleitzahl: 97072 Würzburg<br></p>
                                                 </div>
                                                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                                                     <h4>Details zum Kind</h4> 
-                                                    <p>Name: Hans-Jürgen<br></p>
+                                                    <p>Name: Arnold Mustermann<br></p>
                                                     <p>Schule: Gebrüder Grimm Schule<br></p>
                                                     <p>Klasse: 2a<br></p>
                                                 </div>
@@ -90,7 +90,7 @@
                                                     <i class="fa fa-info-circle fa-lg logo_info"></i> 
                                                 </div>
                                                 <div class="col-md-11 col-lg-11 col-sm-11 col-xs-11">
-                                                    <p>Das Abonnement kann noch bis zum 29.04.2015 storniert werden.<br></p> 
+                                                    <p>Das Abonnement kann noch bis zum 15.09.2015 storniert werden.<br></p> 
                                                 </div>
                                             </div>
                                             <div class="row text-left" style="margin-top: 30px">
@@ -120,7 +120,7 @@
                                                 <strong><strong><div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 abo_border_bottom abo_border abo_color" style="margin-top: 10px; ">
                                                             <div class="row">
                                                                 <div class="col-md-9 col-lg-9">
-                                                                    <p style="margin-top: 25px">Tag 1: 04.05.2015<br></p>
+                                                                    <p style="margin-top: 25px">Tag 1: 04.09.2015<br></p>
                                                                     <p>Brötchen: Mehrkornbrötchen...<br></p>
                                                                     <p>Obst: Apfel<br></p>
                                                                     <p>Getränk: Wasser<br></p>
@@ -137,7 +137,7 @@
                                                         </div><div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 abo_border_bottom abo_border abo_color" style="margin-top: 10px; ">
                                                             <div class="row">
                                                                 <div class="col-md-9 col-lg-9">
-                                                                    <p style="margin-top: 25px">Tag 2: 05.05.2015<br></p>
+                                                                    <p style="margin-top: 25px">Tag 2: 05.09.2015<br></p>
                                                                     <p>Brötchen: Mehrkornbrötchen...<br></p>
                                                                     <p>Obst: Apfel<br></p>
                                                                     <p>Getränk: Wasser<br></p>
@@ -154,7 +154,7 @@
                                                         </div><div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 abo_border_bottom abo_border abo_color" style="margin-top: 10px; ">
                                                             <div class="row">
                                                                 <div class="col-md-9 col-lg-9">
-                                                                    <p style="margin-top: 25px">Tag 3: 06.05.2015<br></p>
+                                                                    <p style="margin-top: 25px">Tag 3: 06.09.2015<br></p>
                                                                     <p>Brötchen: Mehrkornbrötchen...<br></p>
                                                                     <p>Obst: Apfel<br></p>
                                                                     <p>Getränk: Wasser<br></p>
@@ -171,7 +171,7 @@
                                                         </div><div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 abo_border_bottom abo_border abo_color" style="margin-top: 10px; ">
                                                             <div class="row">
                                                                 <div class="col-md-9 col-lg-9">
-                                                                    <p style="margin-top: 25px">Tag 4: 07.05.2015<br></p>
+                                                                    <p style="margin-top: 25px">Tag 4: 07.09.2015<br></p>
                                                                     <p>Brötchen: Mehrkornbrötchen...<br></p>
                                                                     <p>Obst: Apfel<br></p>
                                                                     <p>Getränk: Wasser<br></p>
@@ -188,7 +188,7 @@
                                                         </div><div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 abo_border_bottom abo_border abo_color" style="margin-top: 10px; ">
                                                             <div class="row">
                                                                 <div class="col-md-9 col-lg-9">
-                                                                    <p style="margin-top: 25px">Tag 5: 14.05.2015<br></p>
+                                                                    <p style="margin-top: 25px">Tag 5: 14.09.2015<br></p>
                                                                     <p>Brötchen: Mehrkornbrötchen...<br></p>
                                                                     <p>Obst: Apfel<br></p>
                                                                     <p>Getränk: Wasser<br></p>
@@ -205,7 +205,7 @@
                                                         </div><div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 abo_border_bottom abo_border abo_color" style="margin-top: 10px; ">
                                                             <div class="row">
                                                                 <div class="col-md-9 col-lg-9">
-                                                                    <p style="margin-top: 25px">Tag 6: 15.05.2015<br></p>
+                                                                    <p style="margin-top: 25px">Tag 6: 15.09.2015<br></p>
                                                                     <p>Brötchen: Mehrkornbrötchen...<br></p>
                                                                     <p>Obst: Apfel<br></p>
                                                                     <p>Getränk: Wasser<br></p>
@@ -222,7 +222,7 @@
                                                         </div><div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 abo_border_bottom abo_border abo_color" style="margin-top: 10px; ">
                                                             <div class="row">
                                                                 <div class="col-md-9 col-lg-9">
-                                                                    <p style="margin-top: 25px">Tag 7: 16.05.2015<br></p>
+                                                                    <p style="margin-top: 25px">Tag 7: 16.09.2015<br></p>
                                                                     <p>Brötchen: Mehrkornbrötchen...<br></p>
                                                                     <p>Obst: Apfel<br></p>
                                                                     <p>Getränk: Wasser<br></p>
