--- a/LeckerBag/WebContent/2_uebersicht_abo.html
+++ b/LeckerBag/WebContent/2_uebersicht_abo.html
@@ -61,8 +61,8 @@
                         <div class="col-xs-12 col-md-4 col-lg-4 col-sm-4">
                             <h4>Kinder<br></h4>
                             <select class="form-control">
-                                <option>Hans-Jürgen</option>
-                                <option>Peter</option>                                 
+                                <option>Arnold Mustermann</option>
+                                <option>Bernadette Mustermann</option>                                 
                             </select>
                             <div class="clearfix clear-columns"></div>
                         </div>
@@ -76,11 +76,11 @@
                                             <div class="row border_abo abo_border abo_color" data-pg-collapsed>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Kind<br></h4>
-                                                    <a>Hans-Jürgen</a>
+                                                    <a>Arnold Mustermann</a>
                                                 </div>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Lieferant<br></h4>
-                                                    <a>Bäcker Bob</a>
+                                                    <a>Rösner Backstube</a>
                                                 </div>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Bestelldatum<br></h4>
@@ -116,11 +116,11 @@
                                             <div class="row border_abo abo_border abo_color" data-pg-collapsed>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Kind<br></h4>
-                                                    <a>Hans-Jürgen</a>
+                                                    <a>Arnold Mustermann</a>
                                                 </div>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Lieferant<br></h4>
-                                                    <a>Bäcker Bob</a>
+                                                    <a>Rösner Backstube</a>
                                                 </div>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Bestelldatum<br></h4>
@@ -156,11 +156,11 @@
                                             <div class="row border_abo abo_border abo_color" data-pg-collapsed>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Kind<br></h4>
-                                                    <a>Hans-Jürgen</a>
+                                                    <a>Arnold Mustermann</a>
                                                 </div>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Lieferant<br></h4>
-                                                    <a>Bäcker Bob</a>
+                                                    <a>Rösner Backstube</a>
                                                 </div>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Bestelldatum<br></h4>
