--- a/LeckerBag/WebContent/dashboard_kunde.html
+++ b/LeckerBag/WebContent/dashboard_kunde.html
@@ -16,10 +16,9 @@
         <script src="js/jquery.js"></script>         
         <!-- Scheduler -->
         <script src="http://cdn.alloyui.com/3.0.1/aui/aui-min.js"></script>
-        <link href="http://cdn.alloyui.com/3.0.1/aui-css/css/bootstrap.min.css" rel="stylesheet">
-    </link>
-    <!-- Scheduler -->
-    <script> 
+        <link href="http://cdn.alloyui.com/3.0.1/aui-css/css/bootstrap.min.css" rel="stylesheet"></link>
+    	<!-- Scheduler -->
+    	<script> 
 			$(function(){
 			  $("#header").load("header.html"); 
 			  $("#footer").load("footer.html");
