--- a/LeckerBag/WebContent/header.html
+++ b/LeckerBag/WebContent/header.html
@@ -13,8 +13,8 @@
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>         
     </head>     
     <body>
-        <div class="row" data-pg-collapsed>
-            <div class="col-md-12 col-lg-12" data-pg-collapsed>
+        <div class="row">
+            <div class="col-md-12 col-lg-12">
                 <div class="row" data-pg-collapsed>
                     <div class="text-right col-md-12" id="nav_sn">
                         <a href="#" class="nav_sn_link"><i class="fa fa-facebook"></i></a>
@@ -32,7 +32,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <nav class="navbar navbar-default nav_button" role="navigation"> 
+                        <nav class="navbar navbar-default nav_button" role="navigation" data-pg-collapsed> 
                             <div class="container-fluid" id="navigation_bar"> 
                                 <div class="navbar-header" data-pg-collapsed> 
                                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> 
@@ -41,35 +41,49 @@
                                         <span class="icon-bar"></span> 
                                         <span class="icon-bar"></span> 
                                     </button>                                     
-                                </div>                                 
-                                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> 
-                                    <ul class="nav navbar-nav navbar_container"> 
-                                        <li class="nav_item"> 
-                                            <a href="index.html">Startseite</a> 
-                                        </li>                                         
-                                        <li class="nav_item"> 
-                                            <a href="suche.html">Suche</a> 
-                                        </li>                                         
-                                        <li class="nav_item">
-                                            <a href="dashboard_kunde.html">Mein Leckerbag</a> 
-                                        </li>                                         
-                                        <li class="nav_item"> 
-                                            <a href="#">Über Uns</a> 
-                                        </li>                                         
-                                        <li class="nav_item"> 
-                                            <a href="#">Kontakt</a> 
-                                        </li>                                         
-                                        <li class="nav_item" id="nav_item_last"> 
-                                            <a href="login.html">Anmelden</a> 
-                                        </li>                                         
-                                    </ul>                                     
+                                </div>
+                                <div id="nav-wrapper">
+                                    <div id="nav" class="navbar">
+                                        <div class="navbar-inner">
+                                            <div class="container">
+                                                <div class="span12">
+                                                    <ul class="nav navbar-nav navbar_container"> 
+                                                        <li class="nav_item"> 
+                                                            <a href="index.html">Startseite</a> 
+                                                        </li>                                                         
+                                                        <li class="nav_item"> 
+                                                            <a href="suche.html">Suche</a> 
+                                                        </li>                                                         
+                                                        <li class="nav_item">
+                                                            <a href="dashboard_kunde.html">Mein Leckerbag</a> 
+                                                        </li>                                                         
+                                                        <li class="nav_item"> 
+                                                            <a href="#">Über Uns</a> 
+                                                        </li>                                                         
+                                                        <li class="nav_item"> 
+                                                            <a href="#">Kontakt</a> 
+                                                        </li>                                                         
+                                                        <li class="nav_item" id="nav_item_last"> 
+                                                            <a href="login.html">Anmelden</a> 
+                                                        </li>                                                         
+                                                    </ul>                                                     
+                                                </div>
+                                            </div>                                             
+
+                                            <!-- container -->
+                                        </div>                                         
+
+                                        <!-- navbar-inner -->
+                                    </div>                                     
+
+                                    <!-- navbar -->
                                 </div>                                 
                             </div>                             
                         </nav>                         
                     </div>                     
-                </div>                                  
+                </div>                 
             </div>
-        </div>                                    
+        </div>         
         <!-- Ende des Dokumentes -->         
         <script src="js/jquery.js"></script>         
         <script src="js/bootstrap.js"></script>         
