--- a/LeckerBag/WebContent/header2.html
+++ b/LeckerBag/WebContent/header2.html
@@ -41,29 +41,40 @@
                                         <span class="icon-bar"></span> 
                                         <span class="icon-bar"></span> 
                                     </button>                                     
-                                </div>                                 
-                                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> 
-                                    <ul class="nav navbar-nav navbar_container"> 
-                                        <li class="nav_item"> 
-                                            <a href="index.html">Startseite</a> 
-                                        </li>                                         
-                                        <li class="nav_item"> 
-                                            <a href="suche.html">Suche</a> 
-                                        </li>                                         
-                                        <li class="nav_item">
-                                            <a href="dashboard_lieferant.html">Mein Leckerbag</a> 
-                                        </li>                                         
-                                        <li class="nav_item"> 
-                                            <a href="#">Über Uns</a> 
-                                        </li>                                         
-                                        <li class="nav_item"> 
-                                            <a href="#">Kontakt</a> 
-                                        </li>                                         
-                                        <li class="nav_item" id="nav_item_last"> 
-                                            <a href="login.html">Anmelden</a> 
-                                        </li>                                         
-                                    </ul>                                     
-                                </div>                                 
+                                </div>   
+                                   <div id="nav-wrapper">
+                                    <div id="nav" class="navbar">
+                                        <div class="navbar-inner">
+                                            <div class="container">
+                                                <div class="span12">
+													<ul class="nav navbar-nav navbar_container"> 
+					                                      <li class="nav_item"> 
+					                                          <a href="index.html">Startseite</a> 
+					                                      </li>                                         
+					                                      <li class="nav_item"> 
+					                                          <a href="suche.html">Suche</a> 
+					                                      </li>                                         
+					                                      <li class="nav_item">
+					                                          <a href="dashboard_lieferant.html">Mein Leckerbag</a> 
+					                                      </li>                                         
+					                                      <li class="nav_item"> 
+					                                          <a href="#">Über Uns</a> 
+					                                      </li>                                         
+					                                      <li class="nav_item"> 
+					                                          <a href="#">Kontakt</a> 
+					                                      </li>                                         
+					                                      <li class="nav_item" id="nav_item_last"> 
+					                                          <a href="login.html">Anmelden</a> 
+					                                      </li>                                         
+					                                  </ul>                                                                    
+                                                </div>
+                                            </div>                                             
+                                            <!-- container -->
+                                        </div>                                         
+                                        <!-- navbar-inner -->
+                                    </div>                                     
+                                    <!-- navbar -->
+                                </div>                                                                       
                             </div>                             
                         </nav>                         
                     </div>                     
